@@ -33,41 +33,23 @@ class hmcResourceUpdateSave extends hmController {
      */
     public function process() {
         $data = $this->processInput($_REQUEST);
-        $this->resource->fromArray($data);
 
-        // Find & parse any submitted TVs
-        foreach ($data as $key => $value) {
-            if (substr($key,0,2) == 'tv') {
-                if (is_array($value)) {
-                    $value = implode('||',$value);
-                }
-                if (!$this->resource->setTVValue((int)substr($key,2),$value)) {
-                    //return 'Error saving Template Variable '.substr($key,2);
-                }
-            }
-        }
-        $saved = $this->resource->save();
+        /* @var modProcessorResponse $response */
+        $response = $this->modx->runProcessor('resource/update',$data);
 
-
-        if ($_REQUEST['clearcache'] == 1) {
-            $this->modx->cacheManager->refresh(array(
-                'db' => array(),
-                'auto_publish' => array('contexts' => array($this->resource->get('context_key'))),
-                'context_settings' => array('contexts' => array($this->resource->get('context_key'))),
-                'resource' => array('contexts' => array($this->resource->get('context_key'))),
-            ));
-        }
-
-        if ($saved) {
+        if (!$response->isError()) {
+            $tempRes = $response->getObject();
+            $this->resource = $this->modx->getObject('modResource',$tempRes['id']);
             $this->setPlaceholders(
                 array(
-                    'message' => 'Resource Updated.',
+                    'message' => 'Resource updated.',
                     'resid' => $this->resource->get('id'),
                     'ctx' => $this->resource->get('context_key'),
                 )
             );
         } else {
-            $this->setPlaceholder('message','An error occurred while saving the Resource.');
+            $error = $response->getAllErrors();
+            $this->setPlaceholder('message','Something went wrong updating the Resource: '.implode(', ',$error));
         }
     }
 
@@ -78,15 +60,15 @@ class hmcResourceUpdateSave extends hmController {
      */
     public function processInput($data) {
         foreach ($data as $key => $value) {
-
             /* If richtext, parse using textile */
             if (substr($key,-9) == '-richtext') {
                 $this->hm->modx->getService('t2h','textile',$this->hm->config['corePath'].'classes/textile/');
                 $data[substr($key,0,-9)] = $this->hm->modx->t2h->TextileThis($value);
                 unset ($data[$key]);
             }
-
         }
+        /* Makes sure TVs are processed in the update processor. */
+        $data['tvs'] = true;
         return $data;
     }
 }
